--- a/styles.css
+++ b/styles.css
@@ -11,4 +11,45 @@ Brun: #672727
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.evenemang-header {
+  border: 1px solid black;
+  width: 70rem;
+  height: 35rem;
+  display: flex;
+  background-color: #672727;
+}
+
+.bild13{
+  width: 100%;
+  height: auto;
+}
+
+.info-evenemang{
+  margin-left: 2rem;
+  margin-top: 8rem ;
+  font-size: 16px;
+  color: #F4F4F8;
+
+}
+
+@media (max-width: 768px) {
+  .bild13 {
+    width: 80%;
+  }
+}
+
+@media (max-width: 430px) {
+  .bild13 {
+    width: 60%;
+  }
 }
