William ta bort sin css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* Färger 
 
 Vit: #F4F4F8
@@ -6,5 +7,4 @@ Orange: #DB7851
 Röd: #AF232C
 Brun: #672727 
 
-*/
-
+*//*# sourceMappingURL=style.css.map */
