--- a/style.css
+++ b/style.css
@@ -7,4 +7,322 @@ Orange: #DB7851
 Röd: #AF232C
 Brun: #672727 
 
-*//*# sourceMappingURL=style.css.map */
+*/
+:root {
+  --vit: #f4f4f8;
+  --orange: #db7851;
+  --röd: #af232c;
+  --brun: #762727;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}/*# sourceMappingURL=style.css.map */
+
+body {
+  font-family: Inter, Arial, sans-serif;
+}
+
+#logo {
+  max-width: 120px;
+}
+
+header {
+  background-color: var(--vit);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-height: 123px;
+  padding: 2rem 3rem;
+  box-shadow: 0 6px 13px 7px #7627273e;
+}
+
+.desktop-menu {
+  display: none;
+}
+
+.desktop-menu {
+  font-size: 1.3rem;
+  align-content: center;
+  display: none;
+  position: relative;
+}
+
+.desktop-menu a {
+  color: var(--brun);
+  text-decoration: none;
+}
+
+.desktop-menu a:hover {
+  color: var(--röd);
+  text-decoration: underline;
+}
+
+.desktop-menu ul li {
+  display: inline;
+  margin-left: 3rem;
+}
+
+/* ------------------------- Hamburger menu ----------------------------- */
+
+.hamburger ul {
+  margin: 0;
+  padding: 0;
+  margin-right: -2px;
+  list-style: none;
+  overflow: hidden;
+  background-color: var(--brun);
+  min-width: 30%;
+  position: absolute;
+  right: 2px;
+}
+
+.hamburger li a {
+  display: block;
+  padding: 20px 20px;
+  border-right: 2px solid var(--röd);
+  color: #fff;
+  text-decoration: none;
+}
+
+.hamburger li a:hover,
+.hamburger .menu-btn:hover {
+  background-color: var(--vit);
+  color: var(--brun);
+}
+
+/* menu */
+
+.hamburger .menu {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s ease-out; /* Smooth transition */
+}
+
+/* menu icon */
+
+.hamburger .menu-icon {
+  cursor: pointer;
+  display: inline-block;
+  padding: 28px 20px;
+  position: relative;
+  user-select: none;
+}
+
+.hamburger .menu-icon .navicon {
+  background: var(--brun);
+  display: block;
+  height: 2px;
+  position: relative;
+  transition: background 0.2s ease-out;
+  width: 18px;
+}
+
+.hamburger .menu-icon .navicon:before,
+.hamburger .menu-icon .navicon:after {
+  background: var(--brun);
+  content: "";
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all 0.2s ease-out;
+  width: 100%;
+}
+
+.hamburger .menu-icon .navicon:before {
+  top: 5px;
+}
+
+.hamburger .menu-icon .navicon:after {
+  top: -5px;
+}
+
+/* menu btn */
+
+.hamburger #menu-btn {
+  display: none;
+}
+
+.hamburger #menu-btn:checked ~ .menu {
+  max-height: 240px;
+}
+
+.hamburger #menu-btn ~ .menu-icon {
+  margin-bottom: -5px;
+}
+
+.hamburger #menu-btn:checked ~ .menu-icon {
+  background-color: var(--brun);
+  margin-bottom: -5px;
+}
+
+.hamburger #menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+
+.hamburger #menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
+  background: #fff;
+}
+
+.hamburger #menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
+  background: #fff;
+}
+
+.hamburger #menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.hamburger #menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
+}
+
+/* ------------------------- End Hamburger menu ----------------------------- */
+
+.evenemang-button a {
+  color: var(--vit);
+  background: var(--orange);
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  border: 2px solid var(--brun);
+}
+
+.evenemang-button a:hover {
+  color: var(--vit);
+  background-color: var(--brun);
+  text-decoration: none;
+  border: 2px solid var(--röd);
+}
+
+/* ------------------------- Desktop ---------------------------- */
+
+@media (width > 77.5em) {
+  .desktop-menu {
+    display: block;
+    margin-left: auto;
+  }
+
+  .hamburger {
+    display: none;
+  }
+}
+
+
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+}
+
+.evenemang-header {
+  border: 1px solid black;
+  width: 70rem;
+  height: 36rem;
+  display: flex;
+  background-color: #672727;
+}
+
+
+
+.bild13{
+  width: 100%;
+}
+
+.info-evenemang{
+  margin-left: 2rem;
+  margin-top: 8rem ;
+  font-size: 16px;
+  color: #F4F4F8;
+
+}
+
+@media (max-width: 768px) {
+  .bild13 {
+    width: 80%;
+  }
+}
+
+@media (max-width: 430px) {
+  .bild13 {
+    width: 60%;
+  }
+}
+
+
+
+
+
+
+
+
+.evenemang-kort-bild-1 {
+    width:600px;
+    background-color: black;
+    border:none;
+  }
+  .evenemang-kort-main {
+  background-color: #672727;
+  height:100vh;
+  }
+  .evenemang-kort {
+    margin:auto;
+    border-radius: 12px;
+    background-color: #F4F4F8;
+    max-width:1300px;
+    min-height:500px;
+    padding:2rem;
+    display:flex;
+    flex-direction: row;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.348);
+    }
+    .evenemang-kort-tags {
+      font-weight: 600;
+      position: relative;
+      top: -15px;
+      color: #672727;
+      display:flex;
+      flex-direction: row;
+      justify-content:space-between;
+      }
+    .evenemang-kort-content{
+      color: #AF232C;
+      display:flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      padding:0 15px 0 35px;
+      width:1000px;
+      }
+      .evenemang-kort-content h2{
+        font-size:2.23rem;
+        letter-spacing: 0px;
+        width:500px;
+        }
+      .evenemang-kort-info {
+        width:370px;
+        text-align: left;
+        font-size:18px;
+        line-height: 28px;
+      }
+
+    .evenemang-kort button {
+      position: relative;
+      top: 23px;
+      border-radius: 10px;
+      text-decoration: none;
+      font-weight: 600;
+      font-size:16px;
+      color:#F4F4F8;
+      border: none;
+      width:300px;
+      padding:20px;
+      align-self: flex-end;
+      border:1px solid var(--röd);
+      background-color: var(--orange); 
+    }
+    .evenemang-kort button:hover {
+      cursor:pointer;
+      border:1px solid var(--röd);
+      background-color: var(--brun); 
+    }
