--- a/style.css
+++ b/style.css
@@ -327,14 +327,15 @@ header {
 
 .bocker {
   display: flex;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 }
 
 .bocker-kort {
   display: flex;
-  min-width: 600px;
+  min-width: 40%;
   background-color: var(--vit);
   margin-inline: auto;
-  margin-bottom: 4rem;
   border-radius: 12px;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.348);
 }
@@ -342,6 +343,10 @@ header {
 .bocker-kort img {
   max-height: 250px;
   padding: 2rem;
+}
+
+.bocker-info {
+  padding: 2rem 1rem;
 }
 
 /* ------------------------- / Böcker kort  ---------------------------- */
