--- a/style.css
+++ b/style.css
@@ -343,8 +343,9 @@ header {
 }
 
 .bocker-kort img {
-  max-height: 250px;
-  padding: 2rem;
+  /* max-width: 250px; */
+  max-width: clamp(100px, 200px, 250px);
+  padding: 2rem 1rem;
 }
 
 .bocker-info {
@@ -359,6 +360,24 @@ header {
 .genre {
   color: var(--brun);
   margin-bottom: 0.7rem;
+}
+
+@media (max-width: 1080px) {
+  .bocker {
+    flex-direction: column;
+  }
+
+  .bocker-kort {
+    flex-direction: column;
+  }
+
+  .bocker-kort img {
+    margin-inline: auto;
+  }
+
+  .bocker-info {
+    padding-inline: 1.5rem;
+  }
 }
 
 /* ------------------------- / Böcker kort  ---------------------------- */
