--- a/style.css
+++ b/style.css
@@ -323,6 +323,53 @@ header {
   background-color: var(--brun);
 }
 
+footer {
+  display: flex;
+  justify-content: center;
+  background-color: rgb(233, 232, 232);
+  font-size: small;
+  height: 150px;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  position: relative;
+  bottom: 0px;
+  border-top: 2px solid rgb(228, 228, 228);
+}
+.contact {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.contact a:link {
+  color: black;
+  text-decoration: none;
+}
+.links {
+  padding-left: 15px;
+}
+.links a {
+  color: black;
+  text-decoration: none;
+}
+ul {
+  list-style-type: none;
+}
+.sociala-medier {
+  padding-left: 15px;
+}
+.sociala-medier a {
+  color: black;
+}
+
+@media only screen and (max-width: 545px) {
+  footer {
+    margin-left: -12px;
+    padding: 10px;
+    font-size: 10px;
+    margin-bottom: 20px;
+  }
+}
+
 /* -------------------------  Böcker kort  ---------------------------- */
 
 .bocker {
