--- a/style.css
+++ b/style.css
@@ -257,30 +257,48 @@ header {
 
 
 
+.evenemang-kort-main {
+  background-color: #672727;
+  height:auto;
+  display:flex;
+  flex-wrap: wrap;
+  padding-top:6vh;
+  padding-bottom:8vh;
+  }
+
 .evenemang-kort-bild-1 {
-    width:600px;
+    max-width:55%;
+    height:auto;
     background-color: black;
     border:none;
+    align-self: center;
+    margin-left:-1vh;
   }
-  .evenemang-kort-main {
-  background-color: #672727;
-  height:100vh;
-  }
+
   .evenemang-kort {
     margin:auto;
     border-radius: 12px;
     background-color: #F4F4F8;
-    max-width:1300px;
-    min-height:500px;
+    max-width:clamp(80vw, 60vw, 1500px);
+    max-height:60vh;
     padding:2rem;
+    margin-bottom: 4vh;
     display:flex;
     flex-direction: row;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.348);
     }
+    /* Evenemangskort större skärm */
+    @media (min-width: 1500px) {
+      .evenemang-kort {
+        max-width:60vw;
+        }
+      }
+
     .evenemang-kort-tags {
+      font-size:clamp(0.9rem, 3vh, 1rem);
       font-weight: 600;
       position: relative;
-      top: -15px;
+      margin-top: -4vh;
       color: #672727;
       display:flex;
       flex-direction: row;
@@ -291,32 +309,39 @@ header {
       display:flex;
       flex-direction: column;
       justify-content: space-evenly;
-      padding:0 15px 0 35px;
-      width:1000px;
+      padding:0 1.5rem 0 2rem;
       }
+
+
       .evenemang-kort-content h2{
-        font-size:2.23rem;
+        font-size:clamp(1.5rem, 5vh, 1.9rem);
+        width:90%;
         letter-spacing: 0px;
-        width:500px;
         }
+        @media (min-width: 1500px) {
+          .evenemang-kort-content h2 {
+            width:100%;
+            }
+          }
+    
       .evenemang-kort-info {
-        width:370px;
+        width:75%;
         text-align: left;
-        font-size:18px;
-        line-height: 28px;
+        font-size:clamp(0.9rem, 3vh, 1.1rem);
+        line-height: clamp(1.3rem, 4vh, 1.6rem);
       }
 
     .evenemang-kort button {
       position: relative;
-      top: 23px;
+      top: 2.8vh;
       border-radius: 10px;
       text-decoration: none;
       font-weight: 600;
-      font-size:16px;
+      font-size:clamp(0.9rem, 1vh, 1.1rem);
       color:#F4F4F8;
       border: none;
-      width:300px;
-      padding:20px;
+      width:37vh;
+      padding:2.3vh;
       align-self: flex-end;
       border:1px solid var(--röd);
       background-color: var(--orange); 
@@ -326,3 +351,93 @@ header {
       border:1px solid var(--röd);
       background-color: var(--brun); 
     }
+
+
+    
+   /* Evenemangskort mobil */
+    @media (max-width: 430px) {
+        .evenemang-kort-bild-1 {
+        margin-left:0vh;
+          max-width:100%;
+          height:auto;
+          background-color: black;
+          border:none;
+          align-self: flex-start;
+        }
+        .evenemang-kort-bild-1-variation {
+          margin-top:8vh;
+          margin-left:0vh;
+            max-width:100%;
+            height:auto;
+            background-color: black;
+            border:none;
+            align-self: flex-end;
+          }
+        .evenemang-kort {
+          margin:auto;
+          border-radius: 12px;
+          background-color: #F4F4F8;
+          max-width:92vw;
+          max-height:92vh;
+          margin-bottom:2vh;
+          padding:1rem;
+          padding-bottom:10vh;
+          display:flex;
+          flex-direction: column;
+          box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.348);
+          }
+          .evenemang-kort-tags {
+            font-size:clamp(0.8rem, 3vh, 1rem);
+            font-weight: 600;
+            position: relative;
+            margin-top: 2vh;
+            color: #672727;
+            display:flex;
+            flex-direction: row;
+            justify-content:space-between;
+            }
+          .evenemang-kort-content{
+            color: #AF232C;
+            display:flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            padding:0 1.1rem 0 1rem;
+            }
+            .evenemang-kort-content h2{
+              margin-top:4vh;
+              top:2vh;
+              font-size:clamp(1.2rem, 4vh, 1.5rem);
+              letter-spacing: 0px;
+              width:clamp(1rem, 45vh, 19rem);
+              }
+            .evenemang-kort-info {
+              width:100%;
+              margin-top: 2.2vh;
+              text-align: left;
+              font-size:clamp(0.9rem, 3vh, 1rem);
+              line-height: clamp(1.3rem, 3.6vh, 1.5rem);
+            }
+          .evenemang-kort button {
+            position: relative;
+            top: 5vh;
+            border-radius: 8px;
+            text-decoration: none;
+            font-weight: 600;
+            font-size:clamp(1rem, 1vh, 1.1rem);
+            color:#F4F4F8;
+            border: none;
+            width:100%;
+            padding:2.4vh;
+            align-self: center;
+            border:1px solid var(--röd);
+            background-color: var(--orange); 
+          }
+          .evenemang-kort button:hover {
+            cursor:pointer;
+            border:1px solid var(--röd);
+            background-color: var(--brun); 
+          }
+    }
+    
+    
+    
