--- a/style.css
+++ b/style.css
@@ -43,14 +43,11 @@ header {
   z-index: 1;
 }
 
-.desktop-menu {
-  display: none;
-}
-
+/* Default for desktop */
 .desktop-menu {
   font-size: 1.3rem;
   align-content: center;
-  display: none;
+  display: block;
   position: relative;
 }
 
@@ -69,7 +66,12 @@ header {
   margin-left: 3rem;
 }
 
-/* ------------------------- Hamburger menu ----------------------------- */
+/* Hide hamburger by default */
+.hamburger {
+  display: none;
+}
+
+/* ------------------------- Hamburger menu (mobile) ----------------------------- */
 
 .hamburger ul {
   margin: 0;
@@ -97,22 +99,21 @@ header {
   color: var(--brun);
 }
 
-/* menu */
-
+/* Hamburger menu styles */
 .hamburger .menu {
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.4s ease-out; /* Smooth transition */
+  transition: max-height 0.4s ease-out;
 }
 
-/* menu icon */
-
+/* Hamburger menu icon */
 .hamburger .menu-icon {
   cursor: pointer;
   display: inline-block;
   padding: 28px 20px;
   position: relative;
   user-select: none;
+  margin-bottom: -5px;
 }
 
 .hamburger .menu-icon .navicon {
@@ -143,8 +144,6 @@ header {
   top: -5px;
 }
 
-/* menu btn */
-
 .hamburger #menu-btn {
   display: none;
 }
@@ -153,13 +152,8 @@ header {
   max-height: 240px;
 }
 
-.hamburger #menu-btn ~ .menu-icon {
-  margin-bottom: -5px;
-}
-
 .hamburger #menu-btn:checked ~ .menu-icon {
   background-color: var(--brun);
-  margin-bottom: -5px;
 }
 
 .hamburger #menu-btn:checked ~ .menu-icon .navicon {
@@ -179,6 +173,17 @@ header {
 .hamburger #menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
 .hamburger #menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
   top: 0;
+}
+
+/* Media query for mobile */
+@media (max-width: 1080px) {
+  .desktop-menu {
+    display: none;
+  }
+
+  .hamburger {
+    display: block;
+  }
 }
 
 /* ------------------------- End Hamburger menu ----------------------------- */
@@ -230,7 +235,8 @@ header {
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
 }
 
-.bild13, .bild {
+.bild13,
+.bild {
   width: 100%;
 }
 
@@ -242,13 +248,15 @@ header {
 }
 
 @media (max-width: 768px) {
-  .bild13, .bild {
+  .bild13,
+  .bild {
     width: 80%;
   }
 }
 
 @media (max-width: 430px) {
-  .bild13, .bild {
+  .bild13,
+  .bild {
     width: 60%;
   }
 }
