--- a/style.css
+++ b/style.css
@@ -443,6 +443,219 @@ header {
     }
     
     
+
+
+
+   /*  Startsidan CSS */
+   .start-container {
+    display: flex;
+  }
+
+  .start-header {
+    background-image: url(img/start-main-header-bild2.jpg);
+    background-size: cover;
+    top:5vh;
+    position: relative;
+    margin: auto;
+    border-radius: 15px;
+    width:70vw;
+    height:60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow:5px 5px 10px rgba(0, 0, 0, 0.206);
+  }
+  .start-header h1 {
+    color: #F4F4F8;
+    font-size: 4rem;
+    padding:0 0 0 5vh;
+  }
+  .start-header h3 {
+    color:  #FAB0A6;
+    font-size: 1.4rem;
+    font-weight: 500;
+    padding:0 0 0 5vh;
+  }
+
+
+  .start_main {
+    top:3vh;
+    position: relative;
+    width:80%;
+    height:auto;
+  }
+
+  .start-main-header-button {
+    position: relative;
+    top: 5vh;
+    left:5vh;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: 600;
+    font-size:clamp(1rem, 1vh, 1.1rem);
+    color:#F4F4F8;
+    border: none;
+    width:15%;
+    padding:2.1vh;
+    align-self: left;
+    border:1px solid var(--röd);
+    background-color: var(--orange); 
+  }
+  .start-main-header-button:hover {
+    cursor:pointer;
+    border:1px solid var(--röd);
+    background-color: var(--brun); 
+  }
+
+  .start-aside{
+    overflow: auto;
+    position: fixed;
+    bottom:0;
+    right:0;
+    width:25%;
+    height:83vh;
+  }
+  @media (min-width: 1500px) {
+    .start-aside {
+      width:20%;
+      height:83vh;
+    }
+  }
+
+  .start-aside h2 {
+    font-weight: 900;
+    color:var(--brun);
+    position: relative;
+    top:5vh;
+    text-align: center;
+  }
+
+  .start-bok-1 {
+    color:var(--röd);
+    position: relative;
+    top:5vh;
+    display:flex;
+    flex-direction: row;
+    padding:2vh;
+  }
+
+  .start-bok-1-text {
+    top:2vh;
+    line-height: 2.1vh;
+    color:var(--brun);
+    position: relative;
+    text-align: left;
+    display:flex;
+    flex-direction: column;
+    padding:0 3vh 0 3vh;
+  }
+  .start-bok-1-text h3 {
+    color:var(--röd);
+    margin-bottom: 1vh;
+  }
+
+  .start-aside-bok-bild {
+    top:1vh;
+    position: relative;
+    width:14vh;
+    align-self: flex-end;
+    box-shadow: 3px 3px 0px black;
+    margin-right:3vh;
+  }
+
+  .start-aside button {
+    padding:1vh 2vh 1vh 2vh;
+    border:none;
+    background-color: var(--orange);
+    color:var(--vit);
+    border-radius: 5px;
+    width:8.5vw;
+  }
+  .start-aside button:hover {
+    background-color:var(--brun);
+    cursor:pointer;
+  }
+  @media (min-width: 1500px) {
+    .start-aside button {
+      padding:1vh 2vh 1vh 2vh;
+      width:6.5vw;
+    }
+  }
+
+
+  
+  .start-main-section-2  {
+    top:20vh;
+    position: relative;
+    margin: auto;
+    text-align: center;
+    width:70vw;
+    height:55vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .start-main-section-2 h1 {
+    color: var(--röd);
+    font-size: 3.5rem;
+    padding:0 0 0 5vh;
+  }
+  .start-main-section-2 p {
+    width:50%;
+    line-height: 3.7vh;
+    color: var(--orange);
+    font-size: 1.3rem;
+    font-weight: 500;
+    padding:0 0 0 5vh;
+  }
+  .start-main-section-2-linebreak {
+    margin:1vh;
+    max-width:10vh;
+    height:1vh;
+    border-radius: 15px;
+    background-color: var(--orange);
+  }
+  .start-main-section-3  {
+    background-color: var(--brun);
+    top:20vh;
+    color:var(--vit);
+    position: relative;
+    margin: auto;
+    text-align: center;
+    width:70vw;
+    height:auto;
+    padding-bottom:50vh;
+  }
+  .start-main-section-3 .startsida-main-kort  {
+    top:10vh;
+    background-color: var(--vit);
+    color:var(--orange);
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.248);
+    position: relative;
+    text-align:center;
+    margin: auto;
+    width:40vw;
+    height:auto;
+    display: flex;
+    flex-direction: column;
+    padding:10vh;
+  }
+  .start-main-section-3 p {
+    padding:4vh;
+  }
+
+
+
+
+
+
+
+
+
+
+
     
 
     footer {
