--- a/style.css
+++ b/style.css
@@ -497,8 +497,6 @@ ul {
     
     
 
-
-
    /*  Startsidan CSS */
    .start-container {
     background-color: var(--vit);
@@ -521,14 +519,43 @@ ul {
   }
   .start-header h1 {
     color: #F4F4F8;
-    font-size: 4rem;
+    font-size: 3.1rem;
     padding:0 0 0 5vh;
   }
   .start-header h3 {
     color:  #FAB0A6;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     font-weight: 500;
     padding:0 0 0 5vh;
+  }
+  @media (min-width: 1500px) {
+    .start-header h1 {
+      color: #F4F4F8;
+      font-size: 4rem;
+      padding:0 0 0 5vh;
+    }
+    .start-header h3 {
+      color:  #FAB0A6;
+      font-size: 1.4rem;
+      font-weight: 500;
+      padding:0 0 0 5vh;
+    }
+    .start-main-header-button {
+      position: relative;
+      top: 5vh;
+      left:5vh;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: 600;
+      font-size:clamp(1rem, 1vh, 1.1rem);
+      color:#F4F4F8;
+      border: none;
+      width:15%;
+      padding:2.1vh;
+      align-self: left;
+      border:1px solid var(--röd);
+      background-color: var(--orange); 
+    }
   }
 
 
@@ -549,7 +576,7 @@ ul {
     font-size:clamp(1rem, 1vh, 1.1rem);
     color:#F4F4F8;
     border: none;
-    width:15%;
+    width:20%;
     padding:2.1vh;
     align-self: left;
     border:1px solid var(--röd);
@@ -659,15 +686,33 @@ ul {
   .start-main-section-1 h1 {
     color: var(--röd);
     align-self: center;
-    font-size: 2.5rem;
-    padding:0 5vh 0 5vh;
+    font-size: 1.9rem;
+    padding:0 2vh 0 5vh;
     width:100%;
   }
+  @media (min-width: 1500px) {
+    .start-main-section-1 h1 {
+      color: var(--röd);
+      align-self: center;
+      font-size: 2.5rem;
+      padding:0 5vh 0 5vh;
+      width:100%;
+    }
+  }
+
   .start-main-section-1 p {
-    width:90%;
+    width:95%;
     color: var(--röd);
-    font-size: 1.2rem;
+    font-size: 1rem;
     padding:0 5vh 0 5vh;
+  }
+  @media (min-width: 1500px) {
+    .start-main-section-1 p {
+      width:90%;
+      color: var(--röd);
+      font-size: 1.2rem;
+      padding:0 5vh 0 5vh;
+    }
   }
 
   .start-main-section-1-bild-1 {
@@ -685,11 +730,29 @@ ul {
     font-size:clamp(1rem, 1vh, 1.1rem);
     color:#F4F4F8;
     border: none;
-    width:35%;
+    width:50%;
     padding:2.1vh;
     align-self: left;
     border:1px solid var(--röd);
     background-color: var(--orange); 
+  }
+  @media (min-width: 1500px) {
+    .start-main-section-1-button {
+      position: relative;
+      top: 5vh;
+      left:5vh;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: 600;
+      font-size:clamp(1rem, 1vh, 1.1rem);
+      color:#F4F4F8;
+      border: none;
+      width:35%;
+      padding:2.1vh;
+      align-self: left;
+      border:1px solid var(--röd);
+      background-color: var(--orange); 
+    }
   }
   .start-main-section-1-button:hover {
     cursor:pointer;
@@ -713,16 +776,31 @@ ul {
   }
   .start-main-section-2 h1 {
     color: var(--röd);
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     padding:0 0 0 5vh;
   }
   .start-main-section-2 p {
     width:50%;
     line-height: 3.7vh;
     color: var(--röd);
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-weight: 500;
     padding:0 0 0 8vh;
+  }
+  @media (min-width: 1500px) {
+    .start-main-section-2 h1 {
+      color: var(--röd);
+      font-size: 3.5rem;
+      padding:0 0 0 5vh;
+    }
+    .start-main-section-2 p {
+      width:50%;
+      line-height: 3.7vh;
+      color: var(--röd);
+      font-size: 1.3rem;
+      font-weight: 500;
+      padding:0 0 0 8vh;
+    }
   }
   .start-main-section-2-linebreak {
     margin:1vh;
@@ -750,7 +828,7 @@ ul {
     position: relative;
     text-align:center;
     margin: auto;
-    width:40vw;
+    width:50vw;
     height:auto;
     display: flex;
     flex-direction: column;
@@ -760,7 +838,23 @@ ul {
     padding:0 7vh 0 7vh;
     color:var(--röd);
   }
-
+  @media (min-width: 1500px) {
+    .start-main-section-3 .startsida-main-kort  {
+      top:13vh;
+      background-color: var(--vit);
+      color:var(--orange);
+      border-radius: 10px;
+      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.248);
+      position: relative;
+      text-align:center;
+      margin: auto;
+      width:40vw;
+      height:auto;
+      display: flex;
+      flex-direction: column;
+      padding:10vh;
+    }
+  }
 
 
  /* Startsidan responsiv */
@@ -954,9 +1048,11 @@ ul {
 
 
   }
-  
 
 
+
+
+    
 
 
 
