--- a/style.css
+++ b/style.css
@@ -368,7 +368,6 @@ ul {
   color: black;
 }
 
-<<<<<<< Updated upstream
 
       .evenemang-kort-content h2{
         font-size:clamp(1.5rem, 5vh, 1.9rem);
@@ -501,6 +500,19 @@ ul {
 
 
    /*  Startsidan CSS */
+
+   .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+  }
+  
+
    .start-container {
     background-color: var(--vit);
     display: flex;
@@ -520,16 +532,20 @@ ul {
     justify-content: center;
     box-shadow:5px 5px 10px rgba(0, 0, 0, 0.206);
   }
-  .start-header h1 {
-    color: #F4F4F8;
-    font-size: 4rem;
+  .start-header h4 {
+    color:  #FAB0A6;
+    font-size: 1.4rem;
     padding:0 0 0 5vh;
   }
   .start-header h3 {
-    color:  #FAB0A6;
-    font-size: 1.4rem;
+    color: #F4F4F8;
+    font-size: 4rem;
     font-weight: 500;
     padding:0 0 0 5vh;
+  }
+
+  .start-header p{
+    margin-left: 40px;
   }
 
 
@@ -651,7 +667,7 @@ ul {
     justify-content: flex-start;
     align-items: center;
   }
-  .start-main-section-2 h1 {
+  .start-main-section-2 h2 {
     color: var(--röd);
     font-size: 3.5rem;
     padding:0 0 0 5vh;
@@ -759,16 +775,6 @@ ul {
         margin-bottom: 20px;
       }
     }
-=======
-@media only screen and (max-width: 545px) {
-  footer {
-    margin-left: -12px;
-    padding: 10px;
-    font-size: 10px;
-    margin-bottom: 20px;
-  }
-}
->>>>>>> Stashed changes
 
 /* -------------------------  Böcker kort  ---------------------------- */
 
