--- a/style.css
+++ b/style.css
@@ -576,28 +576,41 @@ ul {
     box-shadow:5px 5px 10px rgba(0, 0, 0, 0.206);
   }
 
-  .start-header h1 {
+
+
+  .start-header h2 {
+    color:  #FAB0A6;
+    font-size: 1.3rem;
+    font-weight: 500;
+    padding:0 0 0 5vh;
+  }
+  .start-header h3 {
     color: #F4F4F8;
     font-size: 3.1rem;
     padding:0 0 0 5vh;
   }
-  .start-header h3 {
-    color:  #FAB0A6;
-    font-size: 1.2rem;
-
-    font-weight: 500;
-    padding:0 0 0 5vh;
+  .start-header p {
+    font-size: 1.3rem;
+    padding:0 0 0 1vh;
   }
+
+
+
   @media (min-width: 1500px) {
-    .start-header h1 {
+    .start-header h3 {
       color: #F4F4F8;
       font-size: 4rem;
       padding:0 0 0 5vh;
     }
-    .start-header h3 {
+    .start-header h2 {
       color:  #FAB0A6;
-      font-size: 1.4rem;
+      font-size: 1.5rem;
       font-weight: 500;
+      padding:0 0 0 5vh;
+    }
+    .start-header h3 {
+      color: #F4F4F8;
+      font-size: 4.1rem;
       padding:0 0 0 5vh;
     }
     .start-main-header-button {
@@ -954,16 +967,22 @@ ul {
     justify-content: center;
     box-shadow:5px 5px 10px rgba(0, 0, 0, 0.206);
   }
-  .start-header h1 {
+  .start-header h3 {
     color: #F4F4F8;
     font-size: 2.2rem;
     padding:0 0 0 5vh;
   }
-  .start-header h3 {
+  .start-header h2 {
     font-size: 1.2rem;
     font-weight: 500;
     padding:0 5vh 0 5vh;
   }
+  .start-header p {
+    font-size: 1.2rem;
+    font-weight: 500;
+    padding:0 5vh 0 0vh;
+  }
+
 
 
   .start_main {
