--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,7 @@
-/* Färger 
-
-Vit: #F4F4F8
-Rosa: #FAB0A6
-Orange: #DB7851
-Röd: #AF232C
-Brun: #672727 
-
-*/
+@import '_variables.scss';
+@import '_mixins.scss';
+@import '_header.scss';
+@import '_footer.scss';
 
 * {
     box-sizing: border-box;
